# langgraph-multi-agent-workflow-studio

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
app/: main.py
app/agents/: __init__.py  base.py  catalog.py  declarative.py
app/core/: config.py
app/db/: base.py
app/models/: activity_log.py  conversation.py  crew.py
app/schemas/: conversation.py  crew.py
app/services/: ai_provider.py  conversation_service.py  crew_service.py  dsl_service.py  workflow_service.py
app/web/: app.js  index.html  styles.css
database/: schema.sql
database/migrations/: 001_local_agent_runtime.sql  002_remove_database_agents.sql
examples/agents/: character_identity_resolver.json  prompt_compiler.json  prompt_consistency_validator.json  prompt_danbooru_query.json  prompt_format_converter.json  prompt_impact_router.json  prompt_requirement_analyzer.json  prompt_reviewer.json  prompt_target_renderer.json  prompt_writer.json  research_agent.json  scene_document_editor.json  scene_document_processor.json  visual_semantic_resolver.json
examples/workflows/: prompt_generation_workflow.json  research_pipeline.json
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
scripts/: __init__.py  generate_agent.py  generate_workflow.py
tests/: conftest.py
tests/api/: test_chat_e2e.py  test_conversation_api.py  test_dsl_api.py  test_web_ui.py
tests/demo/: test_multiagent_workflow.py
tests/scripts/: test_generate_agent.py  test_generate_workflow.py
(+117 files in other folders)
